# guardian-benefits-hub-v1

./: .gitignore  README.md  docker-compose.yml  render.yaml
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: auth.py  config.py  db.py  db_init.py  ghl_client.py  ghl_sync.py  jobs.py  main.py  models.py  policy_classifier.py  queue.py  schemas.py  security.py  unl_sftp.py  worker.py
apps/api/app/routers/: agencies.py  auth.py  commission_sync.py  jobs.py  leaderboard.py  policy_book.py  policy_reports.py  unl.py
apps/api/scripts/: start.sh
apps/web/: index.html  package.json
apps/web/src/: App.tsx  main.tsx  styles.css
apps/web/src/lib/: api.ts
apps/web/src/pages/: AgenciesPage.tsx  CommissionPage.tsx  DashboardPage.tsx  LeaderboardIndexPage.tsx  LeaderboardPage.tsx  LoginPage.tsx  PolicyBookPage.tsx
